<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <EditText
        android:id="@+id/ed_update_cost_line"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:textSize="25dp"
        android:hint="@string/Cost"
        android:textColor="@color/colorDarkYellow"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <EditText
        android:id="@+id/ed_update_Date_line"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:textColor="@color/colorBlue"
        android:gravity="center"
        android:hint="@string/ChooseDate"
        app:layout_constraintTop_toBottomOf="@id/ed_update_cost_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <EditText
        android:id="@+id/ed_update_Note_line"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:textColor="@color/colorDarkYellow"
        android:gravity="center"
        android:hint="@string/AddNote"
        app:layout_constraintTop_toBottomOf="@id/ed_update_Date_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Update_Lines"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlue"
        android:text="@string/Update"
        android:textSize="20dp"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@id/ed_update_Note_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>