<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_Date_cln_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/ChooseDate"
        android:textSize="20dp"
        android:textColor="@color/colorBlue"
        android:gravity="center"


        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_Date_cln_show"
        android:orientation="horizontal"


       >

        <RadioButton

            android:id="@+id/radioYear"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/YEAR"
            android:checked="true"
            android:textSize="25dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/colorGrey"



            />
        <RadioButton
            android:id="@+id/radioMonth"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/MONTH"
            android:checked="true"
            android:textSize="25dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorGrey"

            />
        <RadioButton
            android:id="@+id/radioDay"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/DAY"
            android:checked="true"
            android:textSize="25dp"

            android:textColor="@color/colorGrey"

            />

    </RadioGroup>
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_lines_show"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/rv_Accounting"
    app:layout_constraintTop_toBottomOf="@id/radioGroup"



    />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Accounting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rv_lines_show"

        />




</androidx.constraintlayout.widget.ConstraintLayout>