<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:id="@+id/line_container">



    <TextView

        android:id="@+id/tvDate_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="date"
        android:textColor="@color/colorBlue"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCost_line"
        app:layout_constraintEnd_toStartOf="@id/tv_Detail_line"
        />


    <TextView

        android:id="@+id/tvCost_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Cost"
        android:textColor="@color/colorDarkYellow"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_Detail_line"
        />

    <TextView




        android:id="@+id/tv_Detail_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Detail"
        android:textColor="@color/colorDarkYellow"
        android:textSize="20dp"
       app:layout_constraintStart_toEndOf="@id/tvDate_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvTypeLines"
        />

    <TextView

        android:id="@+id/tvTypeLines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Type"
        android:textColor="@color/colorBlue"
        android:textSize="25dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toEndOf="@id/tv_Detail_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView

        android:id="@+id/tvNote_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Note"
        android:textColor="@color/colorBlue"
        android:textSize="17dp"
    app:layout_constraintStart_toEndOf="@id/tvDate_line"
        app:layout_constraintEnd_toStartOf="@id/tvTypeLines"
        app:layout_constraintTop_toBottomOf="@id/tv_Detail_line"

        />

</androidx.constraintlayout.widget.ConstraintLayout>